Codificar funcionalidades back-end de la aplicación.
Registrar una estacion en la lista estática de la capa DAL.
Validar los datos de ingreso, cuidando que ningún campo esté vacío,
obteniendo el id de manera automática y la capacidad máaxima sea mayor a
0.
Registrar un punto de carga en la lista estática de la capa DAL.
Validar los datos de ingreso, cuidando que ningún campo esté vacío,
impidiendo el ingreso de una fecha igual o anterior a la actual, siendo
la capacidad máxima mayor a 0, y generando el id de manera automática de
acuerdo a la lista existente.
Mostrar las estaciones en la página Ver Estaciones, mediante un GridView
enriquecido con Bootstrap.
Eliminar una estación de la lista estática de la capa DAL.
Mostrar los puntos de carga en la página Ver Puntos de Carga, mediante
un GridView enriquecido con Bootstrap.
Filtrar los puntos de carga de acuerdo al tipo, mediante el componente dropdown list enriquecido con bootstrap.
Modificar los datos de un punto de carga particular.
Validar la modificación de un punto de carga, impidiendo campos vacíos y
desabilitando la modificación del campo ID.

--- a/GestionEstacionesWeb/GestionEstacionesWeb.csproj
+++ b/GestionEstacionesWeb/GestionEstacionesWeb.csproj
@@ -120,6 +120,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="libman.json" />
     <None Include="packages.config" />
     <Content Include="Site.Master" />
     <None Include="Web.Debug.config">
@@ -128,6 +129,13 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Web.sitemap" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GestionEstacionesModel\GestionEstacionesModel.csproj">
+      <Project>{146ee7d2-7f3c-4d44-8e15-dc8f917a8a22}</Project>
+      <Name>GestionEstacionesModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
