--- a/GestionEstacionesWeb/Web.config
+++ b/GestionEstacionesWeb/Web.config
@@ -6,6 +6,7 @@
   -->
 <configuration>
   <system.web>
+    <pages enableEventValidation="false"/>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
@@ -19,5 +20,7 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
